syntax = "proto3";
package settlus.settlement;

import "gogoproto/gogo.proto";
import "settlus/settlement/settlement.proto";

option go_package = "github.com/settlus/chain/x/settlement/types";

// GenesisState defines the settlement module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Tenant tenants = 2 [ (gogoproto.nullable) = false ];
  repeated UTXRWithTenantAndId utxrs = 3 [ (gogoproto.nullable) = false ];
}

message UTXRWithTenantAndId {
  uint64 tenant_id = 1;
  uint64 id = 2;
  UTXR utxr = 3 [ (gogoproto.nullable) = false ];
}
