syntax = "proto3";
package settlus.settlement.v1alpha1;

import "cosmos/base/v1beta1/coin.proto";
import "settlus/oracle/v1alpha1/oracle.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/settlus/chain/x/settlement/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  repeated cosmos.base.v1beta1.DecCoin gas_prices = 1 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable) = false
  ];
  string oracle_fee_percentage = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

// Tenant defines the tenant parameters.
message Tenant {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 id = 1;
  repeated string admins = 2;
  string denom = 3;
  uint64 payout_period = 4;
  string payout_method = 5;
  string contract_address = 6;
}

// UTXR defines the unspent transaction record.
message UTXR {
  string request_id = 1;
  repeated Recipient recipients = 2;
  cosmos.base.v1beta1.Coin amount = 3 [ (gogoproto.nullable) = false ];
  uint64 created_at = 4; // block number of the utxr creation
  settlus.oracle.v1alpha1.Nft nft = 5;
}

message Recipient {
  string address = 1 [
    (gogoproto.customtype) = "github.com/settlus/chain/types.HexAddressString",
    (gogoproto.nullable) = false
  ];
  uint32 weight = 2;
}